# vulkan_experiments

./: .gitignore  local_setup.sh  readme.md
mac/vk_guide_attempt/: readme.md
mac/vk_guide_attempt/chapter-0/: CMakeLists.txt  vk_engine.cpp  vk_initializers.cpp  vk_types.h
mac/vk_guide_attempt/chapter-0b/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h
mac/vk_guide_attempt/chapter-1/: CMakeLists.txt
mac/vk_guide_attempt/chapter-1b/: CMakeLists.txt  vk_engine.cpp  vk_engine.h
mac/vk_guide_attempt/chapter-2/: CMakeLists.txt  vk_engine.cpp  vk_engine.h
mac/vk_guide_attempt/chapter-2b/: CMakeLists.txt  vk_engine.cpp  vk_engine.h
mac/vk_guide_attempt/chapter-2c/: CMakeLists.txt  vk_engine.cpp  vk_engine.h
mac/vk_guide_attempt/shared/: CMakeLIsts.txt  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
mac/vulkan_tutorial/: readme.md
mac/vulkan_tutorial/Basic Foundation/: CMakeLists.txt
mac/vulkan_tutorial/devices_validation_messages/: CMakeLists.txt  main.cpp
mac/vulkan_tutorial/vtut_triangles_no_raii/: CMakeLists.txt  main.cpp
os-independent/: CMakeLists.txt  local_setup.py
os-independent/chapter-2/: vk_engine.cpp
os-independent/frontend/: imgui-renderer.cpp  imgui-renderer.h  imgui-renderer.mm  metal_imgui_backend.h  metal_imgui_backend.mm
os-independent/metal-engine/: metal_engine.mm
os-independent/simple-metal-test/: CMakeLists.txt  imgui.ini
os-independent/vulkan-engine/: CMakeLists.txt  vk_engine.cpp
